<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Live54218Activity!</string>
    <string name="app_name">Live54218</string>
    <string name="mainEnterData">Enter Your Data</string>
    <string name="mainViewHistory">View Your History</string>
    <string name="mainAbout">About Live54218</string>
    <string name="mainSummary">Summary: You have successfully completed 0/0 days!</string>
    <string name="fruit">5 fruits and veggies</string>
    <string name="water">4 Bottles of Water</string>
    <string name="screen">2 Hours of screen time</string>
    <string name="exercise">1 Hour of Exercise</string>
    <string name="sleep">8 Hours of Sleep</string>
    <string name="weight">Weight</string>
    <string name="date">Date:</string>
    <string name="optional">Optional</string>
    <string name="save">Save 54218</string>
    <string name="defaultDate">DD/MM/YYYY</string>
    <string name="mainlogodesc">Live54218 Logo</string>
    <string name="historyText">Before you can begin to determine what the composition of a particular paragraph will be, you must first decide on a working thesis for your paper. What is the most important idea that you are trying to convey to your reader? The information in each paragraph must be related to that idea. In other words, your paragraphs should remind your reader that there is a recurrent relationship between your thesis and the information in each paragraph. A working thesis functions like a seed from which your paper, and your ideas, will grow. The whole process is an organic one—a natural progression from a seed to a full-blown paper where there are direct, familial relationships between all of the ideas in the paper.</string>
    <string name="dateoptionsCurrentDate">Today\'s Entry</string>
    <string name="dateoptionsPastData">A Past Entry</string>
    
    <string name="dateoptionsCustomDate">A Custom Date Entry</string>
    <string name="historyCalendarPrevious">&lt;&lt;</string>
    <string name="historyCalendarNext">&gt;&gt;</string><string name="about54218">Live54218 is Brown County, WI’s approach to becoming the healthiest community in the nation. Our mission is to create environments that support and promote all residents daily in consuming 5 fruits and vegetables, drinking 4 bottles of water, watching less than 2 hours of screen time, participating in at least 1 hour of physical activity, and sleeping 8 hours a night. To learn more, visit: www.Live54218.org </string>
    <string name="about54218p2">This app has been designed to help you track your 5-4-2-1-8 everyday to help you meet your goal of living a happier, healthier, longer life! </string>
    <string name="about54218p3">Created by: Nathan Heppe and Joe Stawicki</string>

</resources>