<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBackground" >

    <Button
        android:id="@+id/optionsButtonEnterToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateoptionsCurrentDate"
        android:layout_gravity="center"
        android:onClick="currentDayClick"
        android:minWidth="200dp" 
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/optionsButtonUpdatePast"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateoptionsPastData"
        android:layout_gravity="center"
        android:onClick="pastDataClick"
        android:minWidth="200dp" />

    <Button
        android:id="@+id/optionsButtonCustomDate"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dateoptionsCustomDate"
        android:minWidth="200dp"
        android:onClick="customDateClick"/>

</LinearLayout>