<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/entryBackground"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fruitLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/entryTextColor"
            android:text="@string/fruit"
            android:layout_marginLeft="@dimen/entryPageLeftMargin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextFruit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/entryPageRightMargin"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="34dip"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/waterLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water"
            android:textColor="@color/entryTextColor"
            android:layout_marginLeft="@dimen/entryPageLeftMargin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextWater"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/entryPageRightMargin"
            android:layout_marginLeft="45dip"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/screenLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen"
            android:textColor="@color/entryTextColor"
            android:layout_marginLeft="@dimen/entryPageLeftMargin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextScreen"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/entryPageRightMargin"
            android:layout_marginLeft="5dip"
            android:inputType="numberDecimal" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/exerciseLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:textColor="@color/entryTextColor"
            android:layout_marginLeft="@dimen/entryPageLeftMargin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextExercise"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/entryPageRightMargin"
            android:layout_marginLeft="42dip"
            android:inputType="numberDecimal" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/sleepLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewSleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep"
            android:textColor="@color/entryTextColor"
            android:layout_marginLeft="@dimen/entryPageLeftMargin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextSleep"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/entryPageRightMargin"
            android:layout_marginLeft="56dip"
            android:inputType="numberDecimal" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/entryTextColor"
            android:layout_marginLeft="@dimen/entryPageLeftMargin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/entryPageRightMargin"
            android:hint="@string/optional"
            android:inputType="numberDecimal"
            android:layout_marginLeft="134dip"
            android:selectAllOnFocus="true"/>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/date"
            android:layout_marginLeft="@dimen/entryPageLeftMargin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/entryTextColor" />

        <TextView
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultDate"
            android:layout_weight="1"
            android:layout_marginLeft="138dip"
            android:layout_marginRight="@dimen/entryPageRightMargin"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical" >
        
        <Button
        android:id="@+id/entrySaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textScaleX="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/save"
        android:onClick="saveClick" />
        
    </LinearLayout>

    

</LinearLayout>